# flutter_pitchdetect

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: pitch_wrapper.cpp  pitch_wrapper.h
android/app/src/main/kotlin/com/cai/pitchdetect/pitchdetect_flutter/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
c++/audioDetail/: PitchDetect.cpp
ios/Runner/: AppDelegate.swift  Info.plist  MyCppWrapper.h  MyCppWrapper.mm  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/c++/audioDetail/: PitchDetect.h  SafeQueue.h  pitch.h
ios/libs/: pitch.h
lib/: main.dart  pitch_detect.dart
test/: widget_test.dart
